[gd_scene load_steps=15 format=3 uid="uid://ccq03g2w30olb"]

[ext_resource type="Script" path="res://src/scripts/gui-scripts/player_gui.gd" id="1_8c46b"]
[ext_resource type="Texture2D" uid="uid://diylxe2xxwkxg" path="res://src/ui/new-ui/buttons/Кнопка настройки.png" id="2_jo81y"]
[ext_resource type="Texture2D" uid="uid://bwwoixqe784rb" path="res://src/ui/new-ui/buttons/Кнопка новости.png" id="3_qdohw"]
[ext_resource type="PackedScene" uid="uid://xgqgl081paug" path="res://src/scenes/gui-scenes/settings_gui.tscn" id="4_i71wt"]
[ext_resource type="Texture2D" uid="uid://b7633u778yuwt" path="res://src/ui/new-ui/misc/Подложка профиля игрока вар. 1.png" id="4_w0wx8"]
[ext_resource type="Texture2D" uid="uid://cr3srbfy2nedy" path="res://src/ui/new-ui/misc/Рамка 1.png" id="5_s8ln3"]
[ext_resource type="Texture2D" uid="uid://bwmkf18tw2gvk" path="res://src/ui/new-ui/misc/Строка ресурсов.png" id="6_eeg00"]
[ext_resource type="Texture2D" uid="uid://24nnr84qh3pf" path="res://src/ui/new-ui/resources/Монеты.png" id="7_f0rq7"]
[ext_resource type="Texture2D" uid="uid://c5ws7he3ft5ma" path="res://src/ui/new-ui/resources/Алмазы.png" id="8_8iypk"]
[ext_resource type="Texture2D" uid="uid://ch3e3kkgwcby4" path="res://src/ui/new-ui/resources/Артефакты.png" id="9_4bcp5"]
[ext_resource type="Texture2D" uid="uid://cqrj1mo0mle5g" path="res://src/ui/new-ui/resources/Пустоты.png" id="10_g8eol"]
[ext_resource type="Texture2D" uid="uid://bxmpmp1b3e2kv" path="res://src/ui/new-ui/buttons/Навигация закрыто.png" id="11_cea7k"]
[ext_resource type="Texture2D" uid="uid://b0452j4jni00y" path="res://src/ui/new-ui/buttons/Навигация открыто.png" id="12_bb58p"]
[ext_resource type="Texture2D" uid="uid://dsouwykeg2fxy" path="res://src/ui/new-ui/buttons/Нижнее меню.png" id="13_j7e1q"]

[node name="PlayerGui" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8c46b")

[node name="SettingsButton" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -106.0
offset_top = 38.0
offset_right = -11.0
offset_bottom = 131.0
grow_horizontal = 0

[node name="Settings" type="TextureButton" parent="SettingsButton"]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("2_jo81y")
texture_pressed = ExtResource("2_jo81y")
texture_hover = ExtResource("2_jo81y")
texture_disabled = ExtResource("2_jo81y")
texture_focused = ExtResource("2_jo81y")
ignore_texture_size = true
stretch_mode = 6

[node name="NewsButton" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -106.0
offset_top = 131.145
offset_right = -11.0
offset_bottom = 224.145
grow_horizontal = 0

[node name="News" type="TextureButton" parent="NewsButton"]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("3_qdohw")
texture_pressed = ExtResource("3_qdohw")
texture_hover = ExtResource("3_qdohw")
texture_disabled = ExtResource("3_qdohw")
texture_focused = ExtResource("3_qdohw")
ignore_texture_size = true
stretch_mode = 6

[node name="PlayerInfoBackground" type="MarginContainer" parent="."]
layout_mode = 1
offset_left = 19.0
offset_top = 42.0
offset_right = 163.0
offset_bottom = 250.0

[node name="TextureRect" type="TextureRect" parent="PlayerInfoBackground"]
layout_mode = 2
texture = ExtResource("4_w0wx8")
expand_mode = 1

[node name="Frame" type="MarginContainer" parent="."]
layout_mode = 1
offset_left = 41.0
offset_top = 41.0
offset_right = 147.0
offset_bottom = 152.0

[node name="TextureRect" type="TextureRect" parent="Frame"]
layout_mode = 2
texture = ExtResource("5_s8ln3")
expand_mode = 1
stretch_mode = 6

[node name="PlayerInfo" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 49.0
offset_top = 151.0
offset_right = 128.0
offset_bottom = 213.0

[node name="VBox" type="VBoxContainer" parent="PlayerInfo"]
layout_mode = 2
theme_override_constants/separation = 7

[node name="NickName" type="Label" parent="PlayerInfo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.976471, 0.941176, 1)
theme_override_colors/font_outline_color = Color(0.662745, 0.443137, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "NickName"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Clan" type="Label" parent="PlayerInfo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.976471, 0.941176, 1)
theme_override_colors/font_outline_color = Color(0.662745, 0.443137, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Clan"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Level" type="Label" parent="PlayerInfo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.976471, 0.941176, 1)
theme_override_colors/font_outline_color = Color(0.662745, 0.443137, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "Level"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerResourcesFrames" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 169.0
offset_top = 40.0
offset_right = 1121.0
offset_bottom = 1044.0
scale = Vector2(0.13, 0.13)

[node name="VBox" type="VBoxContainer" parent="PlayerResourcesFrames"]
layout_mode = 2

[node name="ResourceFrame" type="TextureRect" parent="PlayerResourcesFrames/VBox"]
layout_mode = 2
texture = ExtResource("6_eeg00")
stretch_mode = 6

[node name="ResourceFrame2" type="TextureRect" parent="PlayerResourcesFrames/VBox"]
layout_mode = 2
texture = ExtResource("6_eeg00")
stretch_mode = 6

[node name="ResourceFrame3" type="TextureRect" parent="PlayerResourcesFrames/VBox"]
layout_mode = 2
texture = ExtResource("6_eeg00")
stretch_mode = 6

[node name="ResourceFrame4" type="TextureRect" parent="PlayerResourcesFrames/VBox"]
layout_mode = 2
texture = ExtResource("6_eeg00")
stretch_mode = 6

[node name="PlayerResourcesIcons" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 175.0
offset_top = 44.0
offset_right = 503.0
offset_bottom = 1750.0
scale = Vector2(0.07, 0.07)

[node name="VBox" type="VBoxContainer" parent="PlayerResourcesIcons"]
layout_mode = 2
theme_override_constants/separation = 150

[node name="Coins" type="TextureRect" parent="PlayerResourcesIcons/VBox"]
layout_mode = 2
texture = ExtResource("7_f0rq7")
stretch_mode = 6

[node name="Gems" type="TextureRect" parent="PlayerResourcesIcons/VBox"]
layout_mode = 2
texture = ExtResource("8_8iypk")
stretch_mode = 6

[node name="Artefacts" type="TextureRect" parent="PlayerResourcesIcons/VBox"]
layout_mode = 2
texture = ExtResource("9_4bcp5")
stretch_mode = 6

[node name="Voids" type="TextureRect" parent="PlayerResourcesIcons/VBox"]
layout_mode = 2
texture = ExtResource("10_g8eol")
stretch_mode = 6

[node name="PlayerResourcesInfo" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 199.0
offset_top = 47.0
offset_right = 278.0
offset_bottom = 168.0

[node name="VBox" type="VBoxContainer" parent="PlayerResourcesInfo"]
layout_mode = 2
theme_override_constants/separation = 19
alignment = 1

[node name="Coins" type="Label" parent="PlayerResourcesInfo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.976471, 0.941176, 1)
theme_override_colors/font_outline_color = Color(0.662745, 0.443137, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Gems" type="Label" parent="PlayerResourcesInfo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.976471, 0.941176, 1)
theme_override_colors/font_outline_color = Color(0.662745, 0.443137, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Artefacts" type="Label" parent="PlayerResourcesInfo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.976471, 0.941176, 1)
theme_override_colors/font_outline_color = Color(0.662745, 0.443137, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Voids" type="Label" parent="PlayerResourcesInfo/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.976471, 0.941176, 1)
theme_override_colors/font_outline_color = Color(0.662745, 0.443137, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Navigation" type="Control" parent="."]
anchors_preset = 0
offset_top = -182.0
offset_right = 40.0
offset_bottom = -142.0

[node name="NavigationOpened" type="MarginContainer" parent="Navigation"]
layout_mode = 0
offset_top = 742.0
offset_right = 190.0
offset_bottom = 875.0

[node name="NavigationOpened" type="TextureButton" parent="Navigation/NavigationOpened"]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("12_bb58p")
texture_pressed = ExtResource("12_bb58p")
texture_hover = ExtResource("12_bb58p")
texture_disabled = ExtResource("12_bb58p")
texture_focused = ExtResource("12_bb58p")
ignore_texture_size = true
stretch_mode = 0

[node name="NavigationCloseHitBox" type="MarginContainer" parent="Navigation"]
layout_mode = 0
offset_left = -1.0
offset_top = 810.0
offset_right = 97.0
offset_bottom = 873.0

[node name="NavigationCloseHitBox" type="TextureButton" parent="Navigation/NavigationCloseHitBox"]
layout_mode = 2
action_mode = 0
ignore_texture_size = true
stretch_mode = 0

[node name="NavigationClosed" type="MarginContainer" parent="Navigation"]
layout_mode = 0
offset_top = 775.0
offset_right = 123.0
offset_bottom = 877.0

[node name="NavigationClosed" type="TextureButton" parent="Navigation/NavigationClosed"]
layout_mode = 2
action_mode = 0
texture_normal = ExtResource("11_cea7k")
texture_pressed = ExtResource("11_cea7k")
texture_hover = ExtResource("11_cea7k")
texture_disabled = ExtResource("11_cea7k")
texture_focused = ExtResource("11_cea7k")
ignore_texture_size = true
stretch_mode = 0

[node name="Home" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Home" type="MarginContainer" parent="Home"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 852.0
offset_right = 460.0
offset_bottom = 934.0
grow_horizontal = 2
grow_vertical = 0

[node name="Home" type="TextureRect" parent="Home/Home"]
layout_mode = 2
texture = ExtResource("13_j7e1q")
expand_mode = 1
stretch_mode = 6

[node name="TavernHitBox" type="MarginContainer" parent="Home"]
layout_mode = 0
offset_left = 1.0
offset_top = 899.0
offset_right = 101.0
offset_bottom = 974.0

[node name="TavernHitBox" type="TextureButton" parent="Home/TavernHitBox"]
layout_mode = 2
action_mode = 0
ignore_texture_size = true
stretch_mode = 0

[node name="Settings" parent="." instance=ExtResource("4_i71wt")]
visible = false
layout_mode = 1

[connection signal="pressed" from="SettingsButton/Settings" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Navigation/NavigationCloseHitBox/NavigationCloseHitBox" to="." method="_on_navigation_close_hit_box_pressed"]
[connection signal="pressed" from="Navigation/NavigationClosed/NavigationClosed" to="." method="_on_navigation_closed_pressed"]
